Changes the about page information

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About EverAS: Application Suite</title>
-    <link rel="icon" type="image/x-icon" href="logo.ico">
+    <link rel="icon" type="image/x-icon" href="img_assets/logo.ico">
     <link rel="stylesheet" href="src/css/about.css">
     <style>html 
         {cursor: url('img_assets/cursortilt.png'), auto;
@@ -19,36 +19,40 @@
     <h1 align="center">[About EverAS]</h1>
     <div id="about" id="id-container">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Integer consectetur venenatis mi non porttitor. 
-            Proin aliquet turpis et turpis facilisis, 
-            quis rhoncus quam feugiat. Cras at dolor eu metus gravida mattis. 
-            Mauris vitae volutpat magna. Donec porttitor tortor tellus, 
-            blandit vehicula massa pellentesque quis. 
-            Cras ac orci quis lacus porta venenatis nec nec magna. 
-            Sed egestas pretium blandit. Mauris orci lectus, 
-            blandit quis velit eu, lacinia rutrum neque. 
-            Aliquam pellentesque tempor varius. 
-            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; 
-            Pellentesque vulputate, felis interdum elementum fringilla, purus justo interdum mi, id imperdiet turpis nisl vitae eros.
+            <b>EverAS</b> (AS stands for Application Suite/System) is a web-integrated, 
+            cloud based application system, designed to simulate how a command-line interface (CLI) functions and works. 
         </p>     
         <p>
-            Praesent eget commodo quam. 
-            Curabitur sollicitudin orci ac dignissim tincidunt. 
-            Fusce efficitur rhoncus placerat. Donec varius viverra dolor, 
-            non vestibulum nisl volutpat vel. Fusce urna dolor, 
-            ullamcorper id congue id, elementum vitae est. 
-            Aliquam sagittis pulvinar lacus, sit amet lacinia augue rutrum id. 
-            Proin ac diam elementum, ornare tellus in, ultricies justo. 
-            Fusce at ligula egestas, sollicitudin nunc sed, efficitur sem. 
-            Etiam semper eros pellentesque est pharetra, vitae tempus nunc eleifend. 
-            Maecenas suscipit lectus ac odio consectetur, vitae pharetra lorem tempor. 
-            Phasellus ut ligula mi.
+            <b>EverAS</b> is designed to run on both desktop and mobile devices, with portability, and simplicity as the priority. 
+            This system is made for everyone curious about how a CLI operates — 
+            from students and beginners learning computing basics to developers wanting a lightweight, 
+            portable environment accessible on desktop and mobile. 
+            Unlike traditional operating systems or desktop-only shells, 
+            <b>EverAS</b> runs entirely in your browser, combining cloud accessibility, device portability, 
+            and modular CLI-style tools in a single suite. 
         </p>   
-        
+        <p>
+            <b>EverAS</b> uses simple commands such as <u>help</u> for displaying important commands, 
+            <u>clear</u> for clearing the console screen, 
+            and <u>exit</u> for exiting a current feature you opened and nav + feature for navigating to any features.
+        </p>
+        <p>
+            Currently, <b>EverAS</b> contains different applications known as “features”. These features are the following:
+        </p>
+        <p>1. Home menu – the default screen for the system. Features a date and dynamic clock.</p>
+        <p>2. Main menu – a sub-feature under home menu. 
+            Displays the current system’s  feature and their respective names to be used with the nav command.</p>
+        <p>3 . Mathematical calculator – A simple tool for performing basic mathematical operations. 
+            Now supports logging and lets you access your operation history through integrated database fields.</p>
+        <p>4. Body Mass Index (BMI) calculator – This feature allows you to estimate your body fat percentage by taking your height and weight value. 
+            Height value supports cm, m, ft & in while Weight value supports kg and lbs. </p>
+        <p>5. Day-Time converter –  Instantly convert any time unit (days, hours, minutes, seconds) to another equivalent unit.</p>
+        <p>6. Temperature converter – Instantly convert temperature values like Celsius (°C) to Fahrenheit (°F) and vice versa.</p>
+        <p>7. Ping Pong – A simple game of the classic title. You are in for a Player vs COM game. First to score 20 points win the game. </p>
+        <p>8. ASCII animation test-  an experimental feature that showcases a short animation, made in multiple frames of ASCII characters.</p>
     </div> 
     <div id="button-container" align="center">
-        <button type="button" onclick="window.location.href='index.html'">[To EverAS]</button>
+        <button type="button" onclick="window.location.href='https://everas-cli.netlify.app/'">[To EverAS]</button>
     </div>
 
 </body>
