EverOS is now updated to v.2.5.p.b

--- a/about.html
+++ b/about.html
@@ -50,6 +50,7 @@
         <p>6. Temperature converter – Instantly convert temperature values like Celsius (°C) to Fahrenheit (°F) and vice versa.</p>
         <p>7. Ping Pong – A simple game of the classic title. You are in for a Player vs COM game. First to score 20 points win the game. </p>
         <p>8. ASCII animation test-  an experimental feature that showcases a short animation, made in multiple frames of ASCII characters.</p>
+        <p>9. English dictionary - based on the Online Plain Text English Dictionary (OPTED). Allows you to search words as command.</p>
     </div> 
     <div id="button-container" align="center">
         <button type="button" onclick="window.location.href='https://everas-cli.netlify.app/'">[To EverAS]</button>
